--- a/css/main.css
+++ b/css/main.css
@@ -148,16 +148,6 @@ button {
     width: 120px;
 }
 
-#colourSettingsButton {
-    background-color: var(--button-bg);
-    cursor: pointer;
-    margin: 10px;
-    padding:10px;
-    position: absolute;
-    right:0;
-    top:0;
-}
-
 #exitBonusGameContainer {
     transition: opacity 0.5s, visibility 0s 0.5s;
     align-items: center;
@@ -282,6 +272,21 @@ button {
 #loadingScreenContainer.fadeout {
     animation: fadeOut 1s ease-in-out forwards;
     opacity: 0;
+}
+
+.mainButton {
+    cursor: pointer;
+}
+
+#mainButtonsContainer {
+    background-color: var(--button-bg);
+    column-gap: 16px;
+    display: flex;
+    margin: 10px;
+    padding:10px;
+    position: absolute;
+    right:0;
+    top:0;
 }
 
 #mainContainer {
