--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
     --muted: #94a3b8;
     --orange: #ff8c00;
     --red: #ff3030;
+    --stat-easy: #06d474;
     --white: #e6eef6;
 }
 
@@ -308,6 +309,17 @@ button {
     color: var(--red);
 }
 
+#playerColourAndLevel {
+    align-items: center;
+    border-radius: 10px;
+    display: flex;
+    height: 100px;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px var(--black);
+    width: 100%;
+}
+
 #playerScoreAndLevelContainer {
     align-items: center;
     background-color: #00000030;
@@ -373,7 +385,7 @@ button {
     flex-direction: column;
     font-size: 2em;
     padding: 20px;
-    width: 720px;
+    width: 760px;
 }
 
 #playerStatsTitle {
@@ -422,8 +434,12 @@ button {
     
 }
 
-.statsEasy {
+.statsAccent {
     color: var(--accent);
+}
+
+.statsEasy {
+    color: var(--stat-easy);
 }
 
 .statsMedium {
