--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
     --red: #ff3030;
     --stat-easy: #06d474;
     --white: #ededed;
+    --verydark: #111111;
 }
 
 /* ANIMATIONS */
@@ -120,7 +121,7 @@ button {
     padding: 30px;
     position: absolute;
     right: 10px;
-    top: 60px;
+    top: 80px;
     z-index: 100;
 }
 
@@ -208,7 +209,7 @@ button {
 }
 
 #colourOptions {
-    background-color: #00000040;
+    background-color: var(--bg);
     border: 1px solid var(--white);
     display: flex;
     flex-direction: column;
@@ -218,7 +219,7 @@ button {
     position: absolute;
     right: 0;
     row-gap: 10px;
-    top: 50px;
+    top: 70px;
     width: 120px;
 }
 
@@ -304,6 +305,77 @@ button {
     justify-content: space-between;
 }
 
+.helpButton {
+    border: 1px solid var(--accent);
+    border-radius: 8px;
+    cursor: pointer;
+    padding: 10px 32px;
+}
+.helpButton:hover {
+    background-color: var(--button-bg);
+}
+
+.helpButtonSelected {
+    background-color: var(--button-bg);
+}
+
+#helpButtons {
+    background-color: #00000040;
+    border-bottom: 1px solid var(--accent);
+    border-top: 1px solid var(--accent);
+    column-gap: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 32px;
+    padding: 20px;
+}
+
+#helpContainer {
+    align-items: center;
+    background-color: var(--bg);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    transform: translateX(100vw);
+    width: 100vw;
+    z-index: 10;
+}
+#helpContainer.active {
+    transform: translateX(0);
+}
+#helpInnerContainer {
+    display: flex;
+    flex-direction: column;
+    height: 95%;
+    width: 95%;
+}
+
+.helpPage {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.helpSystemParagraph {
+    font-size: 21px;
+    line-height: 150%;
+    margin-bottom: 20px;
+    text-align: left;
+    width: 80%;
+}
+
+#helpSystemTitle {
+    font-size: 34px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
 .hidden {
     display: none !important;
 }
@@ -341,7 +413,7 @@ button {
     text-shadow: 0 0 10px var(--white);
     top: 0;
     width: 100vw;
-    z-index: 10;
+    z-index: 15;
 }
 #loadingScreenContainer.fadeout {
     animation: fadeOut 1s ease-in-out forwards;
@@ -349,13 +421,22 @@ button {
 }
 
 .mainButton {
+    background-color: var(--bg);
+    border: 1px solid var(--accent);
+    border-radius: 5px;
+    color: var(--accent);
     cursor: pointer;
+    padding: 10px;
+    text-align: center;
+    width: 30px;
 }
 
 #mainButtonsContainer {
-    background-color: var(--button-bg);
+    background-color: var(--bg);
+    border: 1px solid var(--verydark);
     column-gap: 16px;
     display: flex;
+    font-size: 21px;
     margin: 10px;
     padding:10px;
     position: absolute;
@@ -541,11 +622,12 @@ button {
     background: #00000040;;
     border: 1px solid #ffffff40;
     border-radius: 12px;
-    box-shadow: 0 6px 30px rgba(2, 6, 23, 0.6);
+    box-shadow: 0 6px 30px #61616199;
     flex-direction: column;
     margin: 28px auto;
     max-width: 980px;
     padding: 20px;
     position: relative;
+    min-width: 820px;
     z-index: 5;
 }
