Games played bug fixes v1.8.4
Bonus games now load the positions into the player entry list array and increments and decrements the played counter correctly.
Selecting New Puzzle while playing the bonus game will also reset the played var correctly.

--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,7 @@ button {
     position: absolute;
     visibility: hidden;
     width: 100vw;
+    z-index: 12;
 }
 #exitBonusGameContainer.active {
     transition: opacity 0.5s;
