--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,8 @@ button {
 
 
 .bgImageOption {
+    background-color: var(--accent);
+    background-blend-mode: multiply;
     background-size: contain;
     cursor: pointer;
     height: 100px;
@@ -108,6 +110,20 @@ button {
     justify-content: center;
     padding-bottom: 10px;
     width: 98px;
+}
+
+.bgImageOptionPositioned {
+    align-items: flex-end;
+    background-color: var(--accent);
+    cursor: pointer;
+    display: flex;
+    font-size: 0.6em;
+    font-weight: bold;
+    height: 80px;
+    justify-content: center;
+    padding: 10px;
+    text-align: center;
+    width: 80px;
 }
 
 #bgImageOptions {
