Help Menu + Help + Note Entry Keys + Fireworks GL
You can switch between note mode and cell mode using shift/ctrl.

Help menu updated to mention the ability to switch between note mode and cell mode using shit/ctrl.

Help screen now shows green corner dot when entering notes.

Updated help to move the buttons outside the main container. Allows me to make the button band 100% width of the screen (with no borders).

Added Fireworks GL for machines that have it available.

--- a/css/main.css
+++ b/css/main.css
@@ -343,8 +343,9 @@ button {
     column-gap: 20px;
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 32px;
+    margin: 32px 0;
     padding: 20px;
+    width: 100%;
 }
 
 #helpContainer {
@@ -358,7 +359,7 @@ button {
     height: 100vh;
     margin: 0;
     padding: 0;
-    transform: translateX(100vw);
+    transform: translateX(150vw);
     width: 100vw;
     z-index: 10;
 }
